--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "author": "Michael Copland <mjbcopland@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "ramda": "^0.27.1"
+    "node-fetch": "^3.3.0",
+    "ramda": "^0.28.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6",
-    "prettier": "^2.2.1"
-  }
+    "nodemon": "^2.0.20",
+    "prettier": "^2.8.0"
+  },
+  "packageManager": "yarn@3.3.0"
 }
